# nx-governance

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  demo.sh  deploy.sh  dfx.json  rust-toolchain.toml
rs/integration-tests/: Cargo.toml
rs/integration-tests/src/: tests.rs
rs/multisig-voting/: Cargo.toml  multisig-voting.did
rs/multisig-voting/src/: access.rs  lifecycle.rs  main.rs  memory.rs  types.rs
rs/nx-gov-main/: Cargo.toml  nx-gov-main.did
rs/nx-gov-main/src/: access.rs  execution.rs  http.rs  lib.rs  lifecycle.rs  main.rs  memory.rs  metrics.rs  proposal.rs  storage.rs  timer.rs  types.rs  validate.rs
rs/simple-validator/: Cargo.toml  simple-validator.did
rs/simple-validator/src/: access.rs  lifecycle.rs  main.rs  memory.rs  types.rs
rs/template/: Cargo.toml
rs/template/src/: access.rs  lifecycle.rs  main.rs  memory.rs  types.rs
rs/test-canister/: Cargo.toml  test-canister.did
rs/test-canister/src/: access.rs  lifecycle.rs  main.rs  memory.rs  types.rs
security/: access.md  external.md  infrasec.md  setup-checklist.md
tests/: 0_test_normal_flow.sh  1_test_dependent_proposals.sh
