[workspace]
members = [
    "rs/nx-gov-main",
    "rs/simple-validator",
    "rs/multisig-voting",
    "rs/test-canister",
]
resolver = "2"

[workspace.dependencies]
candid = { version = "0.9.7", features = ["parser"] }
ciborium = "0.2.1"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.0"
ic-cdk-timers = "0.5.0"
ic-metrics-encoder = "1.1.0"
ic-stable-structures = "0.6.0-beta.1"
num-traits = "0.2.16"
serde = "1.0.188"
serde_bytes = "0.11.12"
