[workspace]
members = [
    "rs/nx-gov-main",
    "rs/simple-validator",
    "rs/multisig-voting",
    "rs/test-canister",
    "rs/integration-tests"
]
resolver = "2"

[workspace.dependencies]
candid = { version = "0.10.7" }
ciborium = "0.2.2"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.6.4"
num-traits = "0.2.18"
pocket-ic = "2.2"
rand = "0.8.5" 
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

