[package]
name = "integration-tests"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
candid.workspace = true
ciborium.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-metrics-encoder.workspace = true
ic-stable-structures.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true
pocket-ic.workspace = true
rand.workspace = true
nx-gov-main = { path = "../nx-gov-main"}

[[test]]
name = "integration-tests"
path = "src/tests.rs"