[package]
name = "nx-gov-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nx-gov-main"
path = "src/main.rs"

[dependencies]
candid.workspace = true
ciborium.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-metrics-encoder.workspace = true
ic-stable-structures.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true

