[package]
name = "simple-validator"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "simple-validator"
path = "src/main.rs"

[dependencies]
candid.workspace = true
ciborium.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
rand.workspace = true
